[tool.poetry]
name = "hammer_agent"
version = "0.1.0"
description = ""
authors = ["wxx <xiaoximew@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.8"
sanic = "^19.9"
requests = "^2.22"
lxml = "^4.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
patchwork = "^1.0"
fabric = "^2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
